[tool.poetry]
name = "apitable"
version = "1.4.2"
description = "APITable OpenAPI Python SDK"
authors = ["APITable Ltd. <dev@apitable.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
environs = "^9.5.0"
idna = "^3.4"
marshmallow = "^3.20.1"
pydantic = "2.5.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
urllib3 = "^2.0.4"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"
wheel = "^0.41.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
